Update desktop application

--- a/piggy-bank/src/main/resources/view/PBBalanceView.fxml
+++ b/piggy-bank/src/main/resources/view/PBBalanceView.fxml
@@ -2,23 +2,15 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="550.0" maxWidth="600.0" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyBalanceController">
+<VBox id="content-window" stylesheets="@../MainWindow.css" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyBalanceController">
    <children>
-      <HBox maxHeight="100.0" minHeight="100.0" prefHeight="100.0" prefWidth="600.0" spacing="10.0">
+      <HBox id="balance-header-box" spacing="10.0">
          <children>
-            <Label alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="300.0" text="Balance in" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
-            <Label fx:id="monthYearLabel" prefHeight="100.0" prefWidth="300.0">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
+            <Label fx:id="headerLabel" id="balance-title-label"/>
          </children>
       </HBox>
       <HBox prefHeight="60.0" prefWidth="600.0">
