--- a/piggy-bank/src/main/resources/view/PBAddExpense.fxml
+++ b/piggy-bank/src/main/resources/view/PBAddExpense.fxml
@@ -12,18 +12,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxWidth="350.0" minWidth="350.0" prefHeight="200.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyAddExpenseController">
+<VBox id="second-window" onKeyReleased="#handleOnKeyReleased" stylesheets="@../MainWindow.css" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyAddExpenseController">
    <children>
-      <HBox>
+      <HBox id="second-window-header-box">
          <children>
-            <Label alignment="CENTER" prefHeight="37.0" prefWidth="350.0" text="Add Expense ">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
+            <Label id="second-window-title" text="Add Expense" />
          </children>
       </HBox>
-      <GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="330.0" minHeight="-Infinity" minWidth="330.0" prefHeight="120.0" prefWidth="330.0">
+      <GridPane id="second-window-content-box" hgap="10.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="250.0" prefWidth="250.0" />
@@ -35,15 +31,11 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="25.0" prefWidth="100.0" text="Category" />
-            <Label alignment="CENTER" prefHeight="25.0" prefWidth="100.0" text="Date" GridPane.rowIndex="1" />
-            <Label alignment="CENTER" prefHeight="25.0" prefWidth="100.0" text="Title" GridPane.rowIndex="2" />
-            <Label alignment="CENTER" prefHeight="25.0" prefWidth="100.0" text="Amount" GridPane.rowIndex="3" />
-            <Label fx:id="categoryNameLabel" prefHeight="25.0" prefWidth="220.0" GridPane.columnIndex="1">
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </Label>
+            <Label id="second-window-param-name" text="Category" />
+            <Label id="second-window-param-name" text="Date" GridPane.rowIndex="1" />
+            <Label id="second-window-param-name" text="Title" GridPane.rowIndex="2" />
+            <Label id="second-window-param-name" text="Amount" GridPane.rowIndex="3" />
+            <Label id="second-window-constant-param" fx:id="categoryNameLabel" GridPane.columnIndex="1" />
             <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <TextField fx:id="dayField" prefHeight="25.0" prefWidth="40.0">
@@ -51,16 +43,8 @@
                         <Font size="12.0" />
                      </font>
                   </TextField>
-                  <Label fx:id="monthNameLabel" prefHeight="25.0">
-                     <font>
-                        <Font size="12.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="yearLabel" prefHeight="25.0" prefWidth="50.0">
-                     <font>
-                        <Font size="12.0" />
-                     </font>
-                  </Label>
+                  <Label id="second-window-constant-param" fx:id="monthNameLabel" />
+                  <Label id="second-window-constant-param" fx:id="yearLabel" />
                </children>
             </HBox>
             <TextField fx:id="titleField" maxWidth="230.0" minWidth="230.0" prefHeight="25.0" prefWidth="230.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -71,21 +55,18 @@
             <TextField fx:id="amountField" maxHeight="25.0" maxWidth="100.0" minHeight="25.0" minWidth="100.0" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="12.0" />
-               </font></TextField>
+               </font>
+             </TextField>
          </children>
          <VBox.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets left="10.0" right="10.0" top="3.0" />
          </VBox.margin>
       </GridPane>
-      <Pane prefHeight="48.0" prefWidth="300.0">
+      <Pane id="second-window-buttons-box">
          <children>
-            <Button layoutX="178.0" layoutY="10.0" mnemonicParsing="false" onMouseReleased="#handleDiscardButtonReleased" prefHeight="30.0" prefWidth="70.0" text="Discard" />
-            <Button layoutX="264.0" layoutY="10.0" mnemonicParsing="false" onMouseReleased="#handleConfirmButtonReleased" prefHeight="30.0" prefWidth="70.0" text="Confirm" />
-            <Label fx:id="errorLabel" layoutX="10.0" layoutY="10.0" prefHeight="30.0" textFill="#b81212">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
+            <Button id="second-window-button" layoutX="200.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#handleDiscardButtonReleased" text="Discard" />
+            <Button id="second-window-button" layoutX="280.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#handleConfirmButtonReleased" text="Confirm" />
+            <Label id="error-text" fx:id="errorLabel" layoutX="10.0" layoutY="8.0" />
          </children>
       </Pane>
    </children>
