--- a/piggy-bank/src/main/resources/view/PBExpensesCategoryView.fxml
+++ b/piggy-bank/src/main/resources/view/PBExpensesCategoryView.fxml
@@ -8,30 +8,20 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="550.0" maxWidth="600.0" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" spacing="7.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyExpensesCategoryController">
+<VBox id="content-window" stylesheets="@../MainWindow.css" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyExpensesCategoryController">
    <children>
-      <HBox fx:id="headerBox" prefHeight="50.0" prefWidth="510.0" spacing="10.0">
+      <HBox id="header-box" spacing="7.0">
          <children>
-            <Button fx:id="previousMonthButton" mnemonicParsing="false" onMouseReleased="#handlePreviousButtonReleased" prefHeight="50.0" prefWidth="30.0" text="&lt;" />
-            <Label fx:id="headerLabel" alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="250.0" text="Expenses in" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
-            <Label fx:id="monthYearLabel" prefHeight="50.0" prefWidth="260.0">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
-            <Button fx:id="nextMonthButton" mnemonicParsing="false" onMouseReleased="#handleNextButtonReleased" prefHeight="50.0" text="&gt;" />
+            <Button fx:id="previousMonthButton" mnemonicParsing="false" onMouseReleased="#handlePreviousButtonReleased" text="&lt;" />
+            <Label fx:id="headerLabel" id="header-title-label" />
+            <Button fx:id="nextMonthButton" mnemonicParsing="false" onMouseReleased="#handleNextButtonReleased" text="&gt;" />
          </children>
       </HBox>
-      <GridPane fx:id="headerGrid" alignment="CENTER_LEFT" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="510.0" vgap="2.0">
+      <GridPane fx:id="headerGrid" id="second-header-box" alignment="CENTER_LEFT" vgap="2.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="10.0" prefWidth="176.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="334.0" minWidth="220.0" prefWidth="334.0" />
+          <ColumnConstraints hgrow="SOMETIMES" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="264.0" minWidth="264.0" prefWidth="264.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
@@ -40,30 +30,14 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1">
                <children>
-                  <Label fx:id="firstHeaderTextLabel" alignment="BOTTOM_LEFT" prefHeight="30.0" prefWidth="220.0" text="Total expenses:">
-                     <font>
-                        <Font name="System Bold" size="11.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="firstHeaderLabel" alignment="BOTTOM_LEFT" prefHeight="30.0">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
+                  <Label fx:id="firstHeaderTextLabel" id="header-text" alignment="BOTTOM_LEFT" prefHeight="25.0" prefWidth="170.0" text="Total expenses:" />
+                  <Label fx:id="firstHeaderLabel" id="header-text-value" alignment="BOTTOM_LEFT" prefHeight="30.0" />
                </children>
             </HBox>
             <HBox prefHeight="17.0" prefWidth="227.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="secondHeaderTextLabel" alignment="TOP_LEFT" prefHeight="30.0" prefWidth="220.0" text="Predicted expenses:" textFill="#00000073">
-                     <font>
-                        <Font name="System Bold" size="11.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="secondHeaderLabel" alignment="TOP_LEFT" prefHeight="30.0" textFill="#00000073">
-                     <font>
-                        <Font size="12.0" />
-                     </font>
-                  </Label>
+                  <Label fx:id="secondHeaderTextLabel" id="header-text" alignment="TOP_LEFT" prefHeight="25.0" prefWidth="170.0" text="Predicted expenses:" textFill="#00000073" />
+                  <Label fx:id="secondHeaderLabel" id="header-text-value" alignment="TOP_LEFT" prefHeight="30.0" textFill="#d3d7cf" />
                </children>
             </HBox>
          </children>
