--- a/piggy-bank/src/main/resources/view/PBMonthPlannerView.fxml
+++ b/piggy-bank/src/main/resources/view/PBMonthPlannerView.fxml
@@ -12,21 +12,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="550.0" maxWidth="600.0" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyMonthPlannerController">
+<VBox id="content-window" stylesheets="@../MainWindow.css" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyMonthPlannerController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="600.0" text="Month Planner">
-         <font>
-            <Font name="System Bold" size="19.0" />
-         </font>
-      </Label>
-      <HBox prefHeight="60.0" prefWidth="600.0" spacing="15.0">
+      <Pane id="header-box">
          <children>
-            <Label prefHeight="30.0" prefWidth="100.0" text="Choose Month:" />
+            <Label id="header-label" alignment="CENTER" contentDisplay="CENTER" layoutY="8.0" prefWidth="600.0" text="Month Planner" />
+         </children>
+      </Pane>
+      <HBox id="second-header-box" spacing="15.0">
+         <children>
+            <Label id="header-text" prefHeight="30.0" prefWidth="100.0" text="Choose Month:" />
             <ChoiceBox fx:id="monthYearChoiceBox" prefHeight="30.0" prefWidth="180.0" />
             <GridPane maxHeight="45.0" minHeight="45.0" prefHeight="45.0" prefWidth="264.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="125.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="140.0" prefWidth="140.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="143.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="117.0" prefWidth="121.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="15.0" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
@@ -34,36 +34,12 @@
                   <RowConstraints maxHeight="15.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label prefHeight="20.0" text="Predicted expenses:">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Label>
-                  <Label prefHeight="20.0" text="Predicted incomes:" GridPane.rowIndex="1">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="predictedExpensesLabel" prefHeight="15.0" prefWidth="140.0" textFill="RED" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="System Bold" size="11.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="predictedIncomesLabel" prefHeight="15.0" prefWidth="140.0" textFill="GREEN" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="11.0" />
-                     </font>
-                  </Label>
-                  <Label prefHeight="20.0" text="Predicted balance:" GridPane.rowIndex="2">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="predictedBalanceLabel" prefHeight="15.0" prefWidth="140.0" textFill="GREEN" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <font>
-                        <Font name="System Bold" size="11.0" />
-                     </font>
-                  </Label>
+                  <Label id="header-text" prefHeight="20.0" text="Predicted expenses:" />
+                  <Label id="header-text" prefHeight="20.0" text="Predicted incomes:" GridPane.rowIndex="1" />
+                  <Label id="header-text" prefHeight="20.0" text="Predicted balance:" GridPane.rowIndex="2" />
+                  <Label id="header-text-value" fx:id="predictedExpensesLabel" prefHeight="15.0" prefWidth="180.0" textFill="RED" GridPane.columnIndex="1" />
+                  <Label id="header-text-value" fx:id="predictedIncomesLabel" prefHeight="15.0" prefWidth="180.0" textFill="GREEN" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label id="header-text-value" fx:id="predictedBalanceLabel" prefHeight="15.0" prefWidth="180.0" textFill="GREEN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </children>
@@ -88,8 +64,8 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Button fx:id="addIncomeButton" mnemonicParsing="false" onMouseReleased="#handleAddIncomeButtonReleased" prefHeight="30.0" prefWidth="30.0" text="+" />
-                  <Button fx:id="removeIncomeButton" mnemonicParsing="false" onMouseReleased="#handleRemoveIncomeButtonReleased" prefHeight="30.0" prefWidth="30.0" text="-" />
+                  <Button id="action-button" fx:id="addIncomeButton" mnemonicParsing="false" onMouseReleased="#handleAddIncomeButtonReleased" prefWidth="30.0" text="+" />
+                  <Button id="action-button" fx:id="removeIncomeButton" mnemonicParsing="false" onMouseReleased="#handleRemoveIncomeButtonReleased" prefWidth="30.0" text="-" />
                </children>
             </HBox>
             <HBox prefHeight="30.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1">
@@ -99,8 +75,8 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Button fx:id="addExpenseButton" mnemonicParsing="false" onMouseReleased="#handleAddExpenseButtonReleased" prefHeight="30.0" prefWidth="30.0" text="+" />
-                  <Button fx:id="removeExpenseButton" mnemonicParsing="false" onMouseReleased="#handleRemoveExpenseButtonReleased" prefHeight="30.0" prefWidth="30.0" text="-" />
+                  <Button id="action-button" fx:id="addExpenseButton" mnemonicParsing="false" onMouseReleased="#handleAddExpenseButtonReleased" prefWidth="30.0" text="+" />
+                  <Button id="action-button" fx:id="removeExpenseButton" mnemonicParsing="false" onMouseReleased="#handleRemoveExpenseButtonReleased" prefWidth="30.0" text="-" />
                </children>
             </HBox>
             <Pane fx:id="incomesPane" maxHeight="420.0" maxWidth="300.0" minHeight="420.0" minWidth="300.0" prefHeight="420.0" prefWidth="300.0" GridPane.rowIndex="1">
@@ -114,6 +90,9 @@
                </GridPane.margin>
             </Pane>
          </children>
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
       </GridPane>
    </children>
 </VBox>
