--- a/piggy-bank/src/main/resources/view/PBPlanIncomeView.fxml
+++ b/piggy-bank/src/main/resources/view/PBPlanIncomeView.fxml
@@ -12,23 +12,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxWidth="350.0" minWidth="350.0" prefHeight="174.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyPlanIncomeController">
+<VBox id="second-window-small" onKeyReleased="#handleOnKeyReleased" stylesheets="@../MainWindow.css" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggyPlanIncomeController">
    <children>
-      <HBox>
+      <HBox id="second-window-header-box">
          <children>
-            <Label alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="160.0" text="Plan Income ">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
-            <Label fx:id="monthYearLabel" prefHeight="37.0" prefWidth="190.0">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
+            <Label fx:id="headerLabel" id="second-window-title" />
          </children>
       </HBox>
-      <GridPane maxHeight="-Infinity" maxWidth="330.0" minHeight="-Infinity" minWidth="330.0" prefHeight="90.0" prefWidth="330.0">
+      <GridPane id="second-window-small-content-box">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="135.0" prefWidth="135.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="195.0" prefWidth="195.0" />
@@ -38,8 +29,8 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label text="Title" />
-            <Label text="Amount" GridPane.rowIndex="1" />
+            <Label id="second-window-param-name" text="Title" />
+            <Label id="second-window-param-name" text="Amount" GridPane.rowIndex="1" />
             <TextField fx:id="incomeTitleField" maxWidth="180.0" minWidth="180.0" prefHeight="29.0" prefWidth="180.0" GridPane.columnIndex="1" />
             <TextField fx:id="incomeAmountField" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
@@ -47,15 +38,11 @@
             <Insets left="10.0" right="10.0" />
          </VBox.margin>
       </GridPane>
-      <Pane prefHeight="48.0" prefWidth="300.0">
+      <Pane id="second-window-buttons-box">
          <children>
-            <Button layoutX="178.0" layoutY="10.0" mnemonicParsing="false" onMouseReleased="#handleDiscardButtonReleased" prefWidth="70.0" text="Discard" />
-            <Button layoutX="264.0" layoutY="10.0" mnemonicParsing="false" onMouseReleased="#handleConfirmButtonReleased" prefWidth="70.0" text="Confirm" />
-            <Label fx:id="errorLabel" layoutX="10.0" layoutY="10.0" prefHeight="30.0" textFill="#b81212">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
+            <Button id="second-window-button" layoutX="200.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#handleDiscardButtonReleased" text="Discard" />
+            <Button id="second-window-button" layoutX="280.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#handleConfirmButtonReleased" text="Confirm" />
+            <Label fx:id="errorLabel" id="error-text" layoutX="10.0" layoutY="8.0" />
          </children>
       </Pane>
    </children>
