--- a/piggy-bank/src/main/resources/view/PBSavingsView.fxml
+++ b/piggy-bank/src/main/resources/view/PBSavingsView.fxml
@@ -1,72 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="550.0" maxWidth="600.0" minHeight="550.0" minWidth="600.0" prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggySavingsController">
+<VBox id="content-window" stylesheets="@../MainWindow.css" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.piggybank.app.controller.PiggySavingsController">
    <children>
-      <HBox fx:id="headerBox" prefHeight="54.0" prefWidth="510.0" spacing="10.0">
+      <HBox id="header-box" spacing="10.0">
          <children>
-            <Button mnemonicParsing="false" onMouseReleased="#handlePreviousButtonReleased" prefHeight="55.0" text="&lt;" />
-            <Label alignment="CENTER_RIGHT" prefHeight="55.0" prefWidth="250.0" text="Savings report" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
-            <Label fx:id="yearLabel" prefHeight="55.0" prefWidth="260.0">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Label>
-            <Button mnemonicParsing="false" onMouseReleased="#handleNextButtonReleased" prefHeight="55.0" text="&gt;" />
+            <Button mnemonicParsing="false" onMouseReleased="#handlePreviousButtonReleased" text="&lt;" />
+            <Label fx:id="headerLabel" id="header-title-label" />
+            <Button mnemonicParsing="false" onMouseReleased="#handleNextButtonReleased" text="&gt;" />
          </children>
-         <VBox.margin>
-            <Insets bottom="5.0" />
-         </VBox.margin>
       </HBox>
-      <GridPane fx:id="headerGrid">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="114.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="396.0" minWidth="10.0" prefWidth="396.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+      <VBox id="second-header-box">
          <children>
-            <Label prefHeight="16.0" prefWidth="140.0" text="Total savings:">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <Label prefHeight="16.0" prefWidth="140.0" text="Yearly savings:" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="totalSavingsLabel" alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="170.0" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="yearlySavingsLabel" alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="170.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
+            <HBox>
+               <children>
+                  <Label id="header-text" alignment="BOTTOM_LEFT" prefHeight="30.0" prefWidth="140.0" text="Total savings:" />
+                  <Label id="header-text" fx:id="totalSavingsLabel" alignment="BOTTOM_LEFT" prefHeight="30.0" />
+               </children>
+            </HBox>
+            <HBox>
+               <children>
+                  <Label id="header-text" alignment="TOP_LEFT" prefHeight="30.0" prefWidth="140.0" text="Yearly savings:" />
+                  <Label id="header-text" fx:id="yearlySavingsLabel" alignment="TOP_LEFT" prefHeight="30.0" />
+               </children>
+            </HBox>
          </children>
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </GridPane>
+      </VBox>
       <AnchorPane fx:id="savingsAnchor" maxHeight="440.0" maxWidth="600.0" minHeight="440.0" minWidth="600.0" prefHeight="440.0" prefWidth="600.0" />
    </children>
 </VBox>
